google-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: surfscribe-ingress
spec:
  backend:
    serviceName: surfscribe-pod-service
    servicePort: 80
